# strawberry-graphql

./: README.md  database.db  pyproject.toml
app/: db_function.py  schema.py
