[tool.poetry]
name = "python-strawberry-graphql"
version = "0.1.0"
description = ""
authors = ["Igor Candido <igorcr39@gmail.com>"]
readme = "README.md"
packages = [{include = "python_strawberry_graphql"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.18"
strawberry-graphql = {extras = ["cli"], version = "^0.232.1"}


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
